<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/saveExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/zapisz_wydatek"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/placeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/miejsce"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/kwota"
        app:layout_constraintEnd_toEndOf="@+id/placeText"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/placeText"
        app:layout_constraintTop_toBottomOf="@+id/placeText" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/data"
        app:layout_constraintEnd_toEndOf="@+id/amountText"
        app:layout_constraintStart_toStartOf="@+id/amountText"
        app:layout_constraintTop_toBottomOf="@+id/amountText" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/kategoria"
        app:layout_constraintEnd_toEndOf="@+id/dateText"
        app:layout_constraintStart_toStartOf="@+id/dateText"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <EditText
        android:id="@+id/placeInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/biedronka_lidl"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/placeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/placeText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/amountInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBaseline_toBaselineOf="@+id/amountText"
        app:layout_constraintEnd_toEndOf="@+id/placeInput"
        app:layout_constraintStart_toStartOf="@+id/placeInput"
        android:autofillHints="" />

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/dateText"
        app:layout_constraintEnd_toEndOf="@+id/amountInput"
        app:layout_constraintStart_toStartOf="@+id/amountInput"
        android:autofillHints="" />

    <EditText
        android:id="@+id/categoryInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/zakupy_rozrywka"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/categoryText"
        app:layout_constraintEnd_toEndOf="@+id/dateInput"
        app:layout_constraintStart_toStartOf="@+id/dateInput"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>